--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div>
-            <h1>hi</h1>
+            <h1>chit-chat translate</h1>
         </div>
     </body>
 </html>
