--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title>chit-chat</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     </head>
     <body>
-        <div>
-            <h1>hi</h1>
+        <div id='app'>
+            <p>{{ msg }}</p>
         </div>
+        
+        <script src='https://unpkg.com/vue/dist/vue.js'></script>
+        <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
