using google translate

--- a/index.html
+++ b/index.html
@@ -6,11 +6,29 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
+        <h1>Ch</h1>
+            <h2>it</h2>
+            <h2>at</h2>
+        <form>
         <div id='app'>
-            <p>{{ msg }}</p>
+            <rows>
+                <div class="col-md-6">
+                    <button data-toggle="dropdown">language 1</button>
+                    <textarea class="form-control" rows="6"></textarea>
+                </div>
+                <div class="col-md-6"></div>
+                      <button data-toggle="dropdown">language 2</button>
+                      <div></div>
+                </div>
+            <!--<h1>{{ msg }}</h1>-->
+            <!--<div class="dropdown">-->
+            <!--<input v-model="message" data-toggle="dropdown">-->
+            <!--</div>-->
+            <!--<input v-model="message">--><!--no vue gil said no-->
+            </rows>
         </div>
-        
-        <script src='https://unpkg.com/vue/dist/vue.js'></script>
+        </form>
+        <!--<script src='https://unpkg.com/vue/dist/vue.js'></script>-->
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
