--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <form>
         <div id='app'>
             <rows>
-                <div class="col-md-6">
+                <div class="col-md-6" id="translateTxt">
                     <button data-toggle="dropdown">language 1</button>
                     <textarea class="form-control" rows="6"></textarea>
                 </div>
                 <div class="col-md-6"></div>
                       <button data-toggle="dropdown">language 2</button>
-                      <div></div>
+                      <div id="resultTranslate"></div>
                 </div>
             <!--<h1>{{ msg }}</h1>-->
             <!--<div class="dropdown">-->
