completing the front end 2.0

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="col-md-6"></div>
                       <button data-toggle="dropdown">language 2</button>
-                      <div id="resultTranslate"></div>
+                      <div id="resultTranslate" class="form-control" rows="6">sdfg</div>
                 </div>
             <!--<h1>{{ msg }}</h1>-->
             <!--<div class="dropdown">-->
