--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <div id='app'>
-            <p>{{ msg }}</p>
-        </div>
         
-        <script src='https://unpkg.com/vue/dist/vue.js'></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
