--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <link rel="stylesheet" type="text/css" href="main.css">
     </head>
     <body>
-        <div class="navbar navbar-default">
-            <h2>CHITAT</h2>
+        <h2>CHITAT</h2>
+        <div class="container-fuild center">
+            <button role="button" id="flip" class="btn btn-primary">FLIP</button>
+        <div class="col-md-6 col-xs-6 col-sm-6" id="translateTxt">
+            <button class='btn btn-default' data-toggle="dropdown">language 1</button>
+            <textarea class="form-control" rows="6"></textarea>
         </div>
-        <div class="container-fuild">
-            <div class="col-md-4 col-xs-5 col-sm-5" id="translateTxt">
-                <button class='btn btn-default' data-toggle="dropdown">language 1</button>
-                <textarea class="form-control" rows="6"></textarea>
-            </div>
-            <div class="col-md-4 col-xs-5 col-sm-5" id="resultTranslate">
-                  <button class='btn btn-default' data-toggle="dropdown">language 2</button>
-                  <textarea class="form-control" rows="6"></textarea>
-            </div>
+       
+        <div class="col-md-6 col-xs-6 col-sm-6" id="resultTranslate">
+            <button class='btn btn-default' data-toggle="dropdown">language 2</button>
+            <textarea class="form-control" rows="6"></textarea>
+        </div>
         </div>
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
