--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
             <h2>CHITAT</h2>
         </div>
         <div class="container-fuild">
-            <div class="col-md-4 col-xs-5 col-sm-5" id="translateTxt">
-                <button class='btn btn-default' data-toggle="dropdown">language 1</button>
-                <textarea class="form-control" rows="6"></textarea>
-            </div>
-            <div class="col-md-4 col-xs-5 col-sm-5" id="resultTranslate">
-                  <button class='btn btn-default' data-toggle="dropdown">language 2</button>
-                  <textarea class="form-control" rows="6"></textarea>
-            </div>
+            <!--<button id='translate' class="btn btn-success">translate</button>-->
+            <!--<div class="col-md-4 col-xs-5 col-sm-5" id="translateTxt">-->
+            <!--    <button class='btn btn-default' data-toggle="dropdown">language 1</button>-->
+            <!--    <textarea class="form-control" rows="6"></textarea>-->
+            <!--</div>-->
+            <!--<div class="col-md-4 col-xs-5 col-sm-5" id="resultTranslate">-->
+            <!--      <button class='btn btn-default' data-toggle="dropdown">language 2</button>-->
+            <!--      <textarea class="form-control" rows="6"></textarea>-->
+            <!--</div>-->
         </div>
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
