--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>chit-chat</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
@@ -11,8 +13,8 @@
     <div class="container-fuild center">
         <div class="col-md-6 col-xs-6 col-sm-6" id="translateTxt">
             <div class="btn-group">
-            <button class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">language 1<span class="caret"></span></button>
-            <ul class="dropdown-menu"></ul>
+                <button class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">language 1<span class="caret"></span></button>
+                <ul class="dropdown-menu"></ul>
             </div>
             <button role="button" id="flip" class="btn btn-primary">FLIP</button>
             <textarea id='input_1' class="form-control Txt" rows="6"></textarea>
@@ -20,13 +22,14 @@
 
         <div class="col-md-6 col-xs-6 col-sm-6" id="resultTranslate">
             <div class="btn-group">
-            <button id='btn-dropdown' class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">language 2 <span class="caret"></span></button>
-            <ul class="dropdown-menu" aria-labelledby="btn-dropdown"></ul>
+                <button id='btn-dropdown' class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">language 2 <span class="caret"></span></button>
+                <ul class="dropdown-menu" aria-labelledby="btn-dropdown"></ul>
             </div>
+            <button role="button" id="design" class="btn btn-primary">design</button>
             <textarea id='input_2' class="form-control Txt" rows="6"></textarea>
         </div>
     </div>
-
+    <div id="gif">你好</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="translate.js"></script>
