displaying the #gif none

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">language 1<span class="caret"></span></button>
                 <ul class="dropdown-menu"></ul>
             </div>
-            <button role="button" id="flip" class="btn btn-primary">FLIP</button>
+            <button role="button" id="flip" class="btn btn-primary second">FLIP</button>
             <textarea id='input_1' class="form-control Txt" rows="6"></textarea>
         </div>
 
@@ -25,7 +25,7 @@
                 <button id='btn-dropdown' class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">language 2 <span class="caret"></span></button>
                 <ul class="dropdown-menu" aria-labelledby="btn-dropdown"></ul>
             </div>
-            <button role="button" id="design" class="btn btn-primary">design</button>
+            <button role="button" id="design" class="btn btn-primary second">design</button>
             <textarea id='input_2' class="form-control Txt" rows="6"></textarea>
         </div>
     </div>
