--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container-fuild center">
         <div class="col-md-6 col-xs-6 col-sm-6" id="translateTxt">
             <div class="btn-group">
-                <button class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">English<span class="caret"></span></button>
+                <button id='lang_1' class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language 1<span class="caret"></span></button>
                 <ul class="dropdown-menu"></ul>
             </div>
             <button role="button" id="flip" class="btn btn-primary second">FLIP</button>
@@ -22,7 +22,7 @@
 
         <div class="col-md-6 col-xs-6 col-sm-6" id="resultTranslate">
             <div class="btn-group">
-                <button id='btn-dropdown' class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Arabic<span class="caret"></span></button>
+                <button id='lang_2' class='btn btn-default dropdown-toggle Language' data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language 2<span class="caret"></span></button>
                 <ul class="dropdown-menu" aria-labelledby="btn-dropdown"></ul>
             </div>
             <button role="button" id="design" class="btn btn-primary second">design</button>
