changing the title and updating the readme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h2>CHITAT</h2>
+    <h1 id="chit">CHIT - CHAT</h1>
     <div class="container-fuild center">
         <div class="col-md-6 col-xs-6 col-sm-6" id="translateTxt">
             <div class="btn-group">
